<resources>

    <!-- General -->
    <string name="app_name">FFGViewer</string>
    <string name="menu_settings">Paramètres</string>
    
    <!-- Main Activity -->
    <string name="title_activity_main">Menu principal</string>
    
    <string name="hello">Bonjour</string>
    <string name="last_update_db">Dernière mise à jour :</string>
    <string name="last_update_db_date">Jamais mis à jour.</string>
        
    <string name="text_button_access_profile">Accéder à votre profil</string>
    <string name="text_button_search">Chercher un joueur</string>
    <string name="text_button_access_FFG_website">Fédération française de Go</string>
    <string name="text_button_updating">Réactualiser les informations</string>
    <string name="text_button_tournament_schedule">Calendrier des tournois</string>
    
    <!-- Player List Activity -->
    <string name="title_activity_list_player">Sélection d\'un joueur</string>
    
    <string name="player_name">Nom</string>
    <string name="player_surname">Prénom</string>
    
    <!-- Splash Screen Activity -->
    <string name="wait_access_website_ffg">Chargement des données &#8230;</string>
    
    <!-- Player Profile Activity -->
    <string name="licenced_to">Licencié à </string>
    <string name="tournament_list">Participations aux tournois :</string>
    <string name="responsibilities_list">Responsabilités :</string>
    
    <!-- Parameters Activity -->
    <string name="title_parameters_activity">Réglages </string>
</resources>